Post training day 1

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CLOUDINARY_URL=cloudinary://api_key:api_secret@cloudname
+CLOUDINARY_URL=cloudinary://942645782131986:wu2OXKqmbYRSPZljCL9gV3_Kb7Y@drbjuxc0b
